fix videos being moved off-screen

--- a/css/style.scss
+++ b/css/style.scss
@@ -211,7 +211,10 @@ th, td {
 
 .dom {
   position: relative;
-  width: 260px;
+  width: 45%;
+  @media (min-width: 950px) {
+    width: 260px;
+  }
   perspective: 30px;
   margin-top: 15%;
   animation: shake2 10s alternate infinite ease;
@@ -267,10 +270,11 @@ th, td {
 
 .ben {
   position: relative;
-  width: 380px;
+  width: 55%;
   perspective: 50px;
   animation: shake2 10s alternate infinite ease;
   @media (min-width: 950px) {
+    width: 380px;
     &.right {
       float: none;
     }
